# bloom-cpp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md
cmake/googletest/: CMakeLists.txt.in  googletest.cmake
docs/: Doxyfile
include/bloom/: bloom.hpp  filter.hpp  hash.hpp  options.hpp  slice.hpp  static-filter.hpp
tests/: CMakeLists.txt  test.cpp
